--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,11 +4,22 @@
   <title>Swapmeet</title>
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <%= csrf_meta_tags %>
 </head>
 <body>
-
-<%= yield %>
-
+  <div class="container"> 
+  <nav>
+    <div class="nav-wrapper blue-grey darken-1">
+      <a href="#" class="brand-logo center">SwapMeet</a>
+      <ul id="nav-mobile" class="left hide-on-med-and-down">
+        <li><a href="#">Get Stuff</a></li>
+        <li><a href="#">Sell Stuff</a></li>
+        <li><a href="#">Account</a></li>
+      </ul>
+    </div>
+  </nav> 
+    <%= yield %>
+  </div>                   
 </body>
 </html>
