--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -42,5 +42,7 @@
 			    </div>
   			</div>
   		</div>
+  <h2> See Trinkets </h2>
+  <%= link_to "See Trinkets", trinkets_path %>
   </body>
 </html>
