--- a/app/views/trinkets/new.html.erb
+++ b/app/views/trinkets/new.html.erb
@@ -1,5 +1,5 @@
 <h1>New Trinket</h1>
 
-<%= render 'form', trinkt: @trinket %>
+<%= render 'form', trinket: @trinket %>
 
 <%= link_to 'Back', trinkets_path %>
