--- a/app/views/trinkets/index.html.erb
+++ b/app/views/trinkets/index.html.erb
@@ -1,4 +1,29 @@
+<p id="notice"><%= notice %></p>
 
+<h1>Trinkets</h1>
 
-<h2>Trinkets</h2>
-[<%=link_to 'New Trinket', new_trinket_path%>]
+<table>
+  <thead>
+    <tr>
+      <th>Price</th>
+      <th>Description</th>
+      <th colspan="3"></th>
+    </tr>
+  </thead>
+
+  <tbody>
+    <% @trinkets.each do |trinket| %>
+      <tr>
+        <td><%= trinket.price %></td>
+        <td><%= trinket.description %></td>
+        <td><%= link_to 'Show', trinket_path(trinket) %></td>
+        <td><%= link_to 'Edit', edit_trinket_path(trinket) %></td>
+        <td><%= link_to 'Destroy', trinket_path(trinket), method: :delete, data: { confirm: 'Are you sure?' } %></td>
+      </tr>
+    <% end %>
+  </tbody>
+</table>
+
+<br>
+
+[<%= link_to 'New trinket', new_trinket_path %>]
