--- a/app/views/trinkets/show.html.erb
+++ b/app/views/trinkets/show.html.erb
@@ -12,7 +12,7 @@
 
 <p>
   <strong>Image:</strong>
-  <%= image_tag @trinket.photo_path.thumb.url %>
+  <%= image_tag @trinket.photo_path.midsize.url %>
 </p>
 
 <%= link_to 'Edit', edit_trinket_path(@trinket) %> |
