--- a/app/views/trinkets/_form.html.erb
+++ b/app/views/trinkets/_form.html.erb
@@ -26,8 +26,8 @@
     <%= form.file_field :photo_path, id: :trinket_photo_path %>
     <% if form.object.photo_path? %>
       <%= image_tag form.object.photo_path.thumb.url %>
-      <%= form.label :remove_image %>
-      <%= form.check_box :remove_image %>
+      <%= form.label :remove_photo_path %>
+      <%= form.check_box :remove_photo_path %>
     <% end %>
   </div>
 
