Cleaned up the styles for the trinket index page

--- a/app/views/trinkets/index.html.erb
+++ b/app/views/trinkets/index.html.erb
@@ -14,7 +14,7 @@
           </div>
           <div class="back" style="background:#f8f8f8;">
             <div class="back-logo"></div>
-              <div class="back-title">Beer</div>
+              <div class="back-title"><%=trinket.title%></div>
                 <p>
                   <strong>
                     $<%=trinket.price%>
@@ -32,7 +32,6 @@
             </div>
           </div>
         </div>
-      <div class="titleBox"><%=trinket.title %></div>
     </div>
   <% end %>
   </div>
