--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,16 +10,24 @@
 </head>
 <body>
   <div class="container"> 
-  <nav>
-    <div class="nav-wrapper blue-grey darken-1">
-      <a href="#" class="brand-logo center">SwapMeet</a>
-      <ul id="nav-mobile" class="left hide-on-med-and-down">
-        <li><a href="#">Get Stuff</a></li>
-        <li><a href="#">Sell Stuff</a></li>
-        <li><a href="#">Account</a></li>
-      </ul>
-    </div>
-  </nav> 
+    <nav>
+      <div class="nav-wrapper">
+        <a href="#!" class="brand-logo">SwapMeet</a>
+        <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a>
+        <ul class="right hide-on-med-and-down">
+          <li><%= link_to 'View Trinkets', trinkets_path %></li>
+          <li><%= link_to 'New trinket', new_trinket_path %></li>
+          <li><a href="#">Account Management</li>
+          <li><a href="#">Help</li>
+        </ul>
+        <ul class="side-nav" id="mobile-demo">
+          <li><%= link_to 'View Trinkets', trinkets_path %></li>
+          <li><%= link_to 'New trinket', new_trinket_path %></li>
+          <li><a href="#">Account Management</li>
+          <li><a href="#">Help</li>
+        </ul>
+      </div>
+    </nav>
     <%= yield %>
   </div>                   
 </body>
